# ParticleSystem

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
renderdoc/: debug.cap
shaders/: pixel.hlsl  vertex.hlsl
shaders/Particle/: fragment.hlsl  vertex.hlsl
shaders/PostProcessing/: Dissipate.hlsl
src/: ParticleManager.cpp  ParticleManager.h  main.cpp
src/Particles/: ParticleEmitter.cpp  ParticleEmitter.h  ParticleManager.cpp  ParticleManager.h  ParticleRenderer.cpp  ParticleRenderer.h  ParticleStream.cpp  ParticleStream.h  PostProcessingEffect.cpp  PostProcessingEffect.h
